--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "cakephp/cakephp": "3.10.*",
         "cakephp/migrations": "^2.0.0",
         "cakephp/plugin-installer": "^1.3",
-        "mobiledetect/mobiledetectlib": "2.*"
+        "mobiledetect/mobiledetectlib": "2.*",
+        "ext-openssl": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "cakephp/bake": "^1.9.0",
@@ -37,7 +39,6 @@
     "scripts": {
         "post-install-cmd": "App\\Console\\Installer::postInstall",
         "post-create-project-cmd": "App\\Console\\Installer::postInstall",
-        "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump",
         "check": [
             "@test",
             "@cs-check"
